fixed spacing and positioning for footer

--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -4,6 +4,7 @@
     text-align: center;
     background-color: #2c4e80;
     min-height: 100vh;
+    position: relative;
     color: white;
     font-size: calc(10px + 2vmin);
 }
@@ -73,8 +74,8 @@ nav {
     padding: 40px;
     margin-top: 200px;
     background-image: linear-gradient(to right, #ffc55a, #fc4100) !important;
-    position: fixed;
-    bottom: 0px;
+    position: absolute;
+    bottom: 0;
     height: 100px;
     width: 100%;
 }
